--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Node JS</h3>
+                                    <h3 class="skills__name">Firebase</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -239,9 +239,18 @@
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
-
                         </div>
-                      
+
+                        <div class="skills__group">
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">PHP</h3>
+                                    <span class="skills__level">Advanced</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
         </section>
@@ -457,10 +466,10 @@
                 <div class="work__card mix movil">
                     <img src="assets/img/work2.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">App Movil</h3>
+                    <h3 class="work__title">Submission 1</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                    <a href="https://github.com/bayuxxx/Submission1" class="work__button">
+                        Source Code <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
@@ -487,10 +496,10 @@
                 <div class="work__card mix movil">
                     <img src="assets/img/work5.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">App Movil</h3>
+                    <h3 class="work__title">Submission 3</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                    <a href="https://github.com/bayuxxx/Submission3" class="work__button">
+                        Source code <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
@@ -574,7 +583,7 @@
     <!--=============== FOOTER ===============-->
     <footer class="footer">
         <div class="footer__container container">
-            <h1 class="footer__title">Ubayy</h1>
+            <h1 class="footer__title">I Gede Balawa Tangub</h1>
 
             <ul class="footer__list">
 
@@ -597,22 +606,17 @@
 
             <ul class="footer__social">
                 <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
-                        <i class='bx bxl-facebook footer__social-icon'></i>
+                    <a href="https://github.com/bayuxxx" target="_blank" class="footer__social-link">
+                        <i class='bx bxl-github footer__social-icon'></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
-                        <i class='bx bxl-twitter footer__social-icon'></i>
-                    </a>
-                </li>
-                <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
+                    <a href="https://www.linkedin.com/in/ubayyy-undefined-679a57287/" target="_blank" class="footer__social-link">
                         <i class='bx bxl-linkedin footer__social-icon'></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
+                    <a href="https://instagram.com/ubay.dart" target="_blank" class="footer__social-link">
                         <i class='bx bxl-instagram footer__social-icon'></i>
                     </a>
                 </li>
@@ -638,5 +642,6 @@
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
 </body>
+
 
 </html>
