--- a/index.html
+++ b/index.html
@@ -519,9 +519,9 @@
                         <div class="contact__card">
                             <i class='bx bx-mail-send contact__card-icon'></i>
                             <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">user@gmail.com</span>
+                            <span class="contact__card-data">bayulords@gmail.com</span>
 
-                            <a href="mailto:example@domain.com" target="_blank" class="contact__button">
+                            <a href="mailto:bayulords@gmail.com" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
                         </div>
@@ -529,9 +529,9 @@
                         <div class="contact__card">
                             <i class='bx bxl-whatsapp contact__card-icon'></i>
                             <h3 class="contact__card-title">Whatsapp</h3>
-                            <span class="contact__card-data">6969696969</span>
+                            <span class="contact__card-data">08986648730</span>
 
-                            <a href="https://api.whatsapp.com/send?phone=+916969696969&text=Hey there!" target="_blank"
+                            <a href="https://api.whatsapp.com/send?phone=+628986648730&text=Hey there!" target="_blank"
                                 class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
