--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
             </ul>
 
             <span class="footer__copy">
-                &#169; 2022 S44WN. All rights reserved.
+                &#169; 2025 I GEDE BAYU BALAWA TANGUB. All rights reserved.
             </span>
         </div>
     </footer>
