--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix design">
+                <!-- <div class="work__card mix design">
                     <img src="assets/img/work3.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Brand Design</h3>
@@ -520,7 +520,7 @@
                     <a href="#" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
-                </div>
+                </div> -->
 
                 <div class="work__card mix movil">
                     <img src="assets/img/work5.jpg" alt="" class="work__img">
